@@ -19,30 +19,32 @@
     <groupId>net.javacrumbs.shedlock</groupId>
     <artifactId>shedlock-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.19.2-SNAPSHOT</version>
+    <version>4.23.1-SNAPSHOT</version>
     <modules>
         <module>shedlock-core</module>
         <module>micronaut/shedlock-micronaut</module>
         <module>micronaut/micronaut-test</module>
         <module>spring/shedlock-spring</module>
+        <module>spring/test/shedlock-springboot-old-test</module>
         <module>spring/test/shedlock-springboot-test</module>
-        <module>spring/test/shedlock-springboot24-test</module>
-        <module>spring/test/shedlock-springboot22-test</module>
+        <module>spring/test/shedlock-springboot-future-test</module>
         <module>spring/test/shedlock-springboot-sleuth-test</module>
         <module>spring/test/shedlock-springboot-kotlin-test</module>
         <module>spring/test/shedlock-testng-test</module>
         <module>shedlock-test-support</module>
+        <module>providers/hazelcast/shedlock-provider-hazelcast</module>
+        <module>providers/hazelcast/shedlock-provider-hazelcast4</module>
         <module>providers/jdbc/shedlock-test-support-jdbc</module>
+        <module>providers/jdbc/shedlock-provider-jdbc-internal</module>
+        <module>providers/jdbc/shedlock-provider-jdbc</module>
+        <module>providers/jdbc/shedlock-provider-jdbc-template</module>
+        <module>providers/jdbc/shedlock-provider-jdbc-micronaut</module>
         <module>providers/mongo/shedlock-provider-mongo</module>
         <module>providers/mongo/shedlock-provider-mongo-reactivestreams</module>
         <module>providers/elasticsearch/shedlock-provider-elasticsearch</module>
         <module>providers/couchbase/shedlock-provider-couchbase-javaclient</module>
         <module>providers/couchbase/shedlock-provider-couchbase-javaclient3</module>
-        <module>providers/jdbc/shedlock-provider-jdbc</module>
-        <module>providers/jdbc/shedlock-provider-jdbc-template</module>
         <module>providers/zookeeper/shedlock-provider-zookeeper-curator</module>
-        <module>providers/hazelcast/shedlock-provider-hazelcast</module>
-        <module>providers/hazelcast/shedlock-provider-hazelcast4</module>
         <module>providers/redis/shedlock-provider-redis-jedis</module>
         <module>providers/redis/shedlock-provider-redis-spring</module>
         <module>providers/redis/shedlock-provider-redis-spring-1</module>
@@ -51,18 +53,21 @@
         <module>providers/cassandra/shedlock-provider-cassandra</module>
         <module>providers/consul/shedlock-provider-consul</module>
         <module>providers/arangodb/shedlock-provider-arangodb</module>
+        <module>providers/etcd/shedlock-provider-etcd-jetcd</module>
     </modules>
 
     <properties>
-        <spring.version>5.2.7.RELEASE</spring.version>
+        <spring.version>5.3.5</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <spring-boot22.version>2.2.6.RELEASE</spring-boot22.version>
-        <spring-boot23.version>2.3.4.RELEASE</spring-boot23.version>
-        <junit.version>5.6.2</junit.version>
-        <test-containers.version>1.14.3</test-containers.version>
-        <kotlin.version>1.4.10</kotlin.version>
-        <micronaut.version>2.0.0</micronaut.version>
+        <spring-boot-old.version>2.3.4.RELEASE</spring-boot-old.version>
+        <spring-boot-current.version>2.4.4</spring-boot-current.version>
+        <junit.version>5.7.1</junit.version>
+        <test-containers.version>1.15.2</test-containers.version>
+        <kotlin.version>1.4.32</kotlin.version>
+        <micronaut.version>2.4.2</micronaut.version>
+        <micronaut-data.version>2.3.1</micronaut-data.version>
         <logback.version>1.2.3</logback.version>
     </properties>
 
@@ -114,7 +119,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>3.5.15</version>
+                <version>3.9.0</version>
                 <scope>test</scope>
             </dependency>
 
@@ -128,7 +133,7 @@
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
-                <version>3.17.2</version>
+                <version>3.19.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -153,7 +158,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>3.0</version>
+                <version>4.0</version>
                 <configuration>
                     <header>header.txt</header>
                     <excludes>
@@ -232,7 +237,26 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>versions-maven-plugin</artifactId>
-                        <version>2.7</version>
+                        <version>2.8.1</version>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>permit-illegal-access</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--illegal-access=permit</argLine>
+                            <forkCount>4</forkCount>
+                            <argLine>-Xmx512m</argLine>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
